Mon Oct 21 05:03:31 UTC 2002  Logan Hanks  <logan@vt.edu>

  * Abstracted the xmmsctrl API a tiny bit, which necessitated small changes
    in the implementation of every command.  Some time will be needed to
    locate and fix all the tiny bugs I may have introduced in the process.
  * Added Formatter class (untested currently)

Sat Oct 19 19:49:09 UTC 2002  Logan Hanks  <logan@vt.edu>

  * Added in long-awaited changes to make xmms-shell compile under g++ 3
    (patches from several sources)
  * Titles of tracks displayed by LIST are now aligned, and the current
    track is now marked (request #514146)
  * RANDOMTRACK renamed to RANDOM-TRACK (alias to RANDOMTRACK also added)
  * Added CURRENT-TRACK command (request #514146)
  * Added REMOVE command (request #514146)

Thu Oct 17 19:30:49 UTC 2002  Logan Hanks  <logan@vt.edu>

  * Released as 0.99.1
  * WINDOW SHOW now has the correct behavior (closes bug #583730)
  * FADE now advances to next track (closes Debian bug #120161)

Tue Feb 12 01:30:18 UTC 2002  Logan Hanks  <logan@vt.edu>

  * Fixed a typo that caused downvolume to be the same as upvolume (copy and
    paste is a sign of poor design!)
  * The quit field of the CommandContext object is now explicitly
    initialize to false (why didn't g++ -Wall catch this?)
  * Implemented XMMSQUIT command (idea courtesy of Roderick Schertler)
  * include/playlist.h is now mentioned in include/Makefile.am
  * Implemented RANDOMTRACK command, with only a minor attempt at making it
    seem random.  Rather than hard-coding some behavior for the NEXT and
    PREVIOUS commands when shuffle-mode is on, RAND could be used instead.
  * Went ahead and hard-coded some behavior for the NEXT and PREVIOUS
    commands when shuffle-mode is on.  Note that this only works on versions
    of XMMS that provide xmms_remote_is_shuffle (I forget which version
    introduced this).  XMMS's support of this seems really poor, so maybe
    RANDOMTRACK is better.
