@@ -1,0 +1,12 @@
+#ifndef _XMMS_SHELL_UTIL_H_
+
+#define _XMMS_SHELL_UTIL_H_
+
+#include <string>
+
+using namespace std;
+
+string int_to_string(int n);
+
+#endif
+
